fix: fix hard delete roles